--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>2.23.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
+
 
 
     </dependencies>
